--- a/publish- ghcr.yml
+++ b/publish- ghcr.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker login --username saicharan1505 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+#          docker login --username saicharan1505 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+               docker login --username saicharan1505 --password ${{secrets.ACCESS_TOKEN1}} ghcr.io
           docker build -t ghcr.io/saicharan1505/prim-srvc:latest --file Dockerfile .  
           docker push ghcr.io/saicharan1505/prim-srvc:latest
