--- a/.github/workflows/publish- ghcr.yml
+++ b/.github/workflows/publish- ghcr.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker login --username Saicharan1505 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/Saicharan1505/primes-service:latest --file Dockerfile .  
-          docker push ghcr.io/Saicharan1505/primes-service:latest 
+          docker login --username saicharan1505 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+          docker build -t ghcr.io/saicharan1505/primes-service:latest --file Dockerfile .  
+          docker push ghcr.io/saicharan1505/primes-service:latest 
